--- a/Views/css/app.scss
+++ b/Views/css/app.scss
@@ -1,6 +1,6 @@
 body {
   background-color: #f1f1f1;
-  font-family: "Microsoft YaHei UI", serif;
+  font-family: "Microsoft YaHei UI", monospace;
 }
 
 .login-box {
